@startuml

skinparam linetype ortho
hide circle

title ERD - Increment 2\nExtension & Modul Pendukung Operasional

' ==========================================
' EXTENSION DARI INCREMENT 1
' ==========================================

entity "users" as users {
    *id : UUID <<PK>>
    --
    .. Extension fields ..
    invitation_token : VARCHAR(64)
    invitation_sent_at : TIMESTAMP
    activated_at : TIMESTAMP
}

note right of users
  Extension untuk UC-17
  Aktivasi akun pengguna
end note

entity "customers" as customers {
    *id : UUID <<PK>>
    --
    .. Extension fields ..
    points : DECIMAL(9,0)
}

note right of customers
  Extension untuk UC-15, UC-20
  Sistem poin pelanggan
end note

entity "shifts" as shifts {
    *id : UUID <<PK>>
    --
    .. Extension fields ..
    total_refunds : DECIMAL(10,2)
    total_discounts : DECIMAL(10,2)
}

note right of shifts
  Extension untuk UC-21
  Tracking refund & discount
end note

entity "transactions" as transactions {
    *id : UUID <<PK>>
    --
    .. Extension fields ..
    points_used : INT
    points_discount : DECIMAL(15,2)
    total_refund : DECIMAL(15,0)
    cancel_reason : TEXT
    cancel_proof_image : VARCHAR(255)
    refund_by_shift : UUID <<FK>>
    cancelled_by_shift : UUID <<FK>>
    cancelled_at : TIMESTAMP
}

note right of transactions
  Extension untuk UC-15, UC-20, UC-21
  Poin, refund, & pembatalan
end note

entity "transaction_details" as transaction_details {
    *id : UUID <<PK>>
    --
    .. Extension fields ..
    refund_quantity : SMALLINT
}

note right of transaction_details
  Extension untuk UC-21
  Quantity refund per item
end note

' ==========================================
' ENTITAS NOTIFIKASI
' ==========================================

entity "notifications" as notifications {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    title : VARCHAR(100)
    body : TEXT
    type : VARCHAR(100)
    is_read : BOOLEAN
    status : TINYINT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ==========================================
' ENTITAS POIN PELANGGAN
' ==========================================

entity "points_histories" as points_histories {
    *id : UUID <<PK>>
    --
    customer_id : UUID <<FK>>
    transaction_id : UUID <<FK>>
    points_earned : INTEGER
    points_used : INTEGER
    balance_after : INTEGER
    description :TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ==========================================
' ENTITAS STOCK OPNAME
' ==========================================


entity "hitungs" as hitungs {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    hitung_number : VARCHAR(30) <<UNIQUE>>
    action : VARCHAR(50)
    note : TEXT
    status : VARCHAR(50)
    hitung_date : DATE
    hitung_date_finish : DATE
    is_start : BOOLEAN
    is_finish : BOOLEAN
    grand_total : DECIMAL(15,2)
    loss_grand_total : DECIMAL(15,2)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "hitung_details" as hitung_details {
    *id : UUID <<PK>>
    --
    hitung_id : UUID <<FK>>
    material_id : UUID <<FK>>
    unit_id : UUID <<FK>>
    quantity_system : DECIMAL(15,5)
    quantity_actual : DECIMAL(15,5)
    quantity_difference : DECIMAL(15,5)
    price : DECIMAL(15,2)
    total_loss : DECIMAL(15,2)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ==========================================
' ENTITAS INVENTORY LOG
' ==========================================


entity "inventory_logs" as inventory_logs {
    *id : UUID <<PK>>
    --
    material_id : UUID <<FK>>
    material_batch_id : UUID <<FK>>
    user_id : UUID <<FK>>
    action : VARCHAR(100)
    quantity_change : DECIMAL(15,4)
    quantity_after : DECIMAL(15,4)
    reference_type : VARCHAR(100)
    reference_id : VARCHAR(255)
    note : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ==========================================
' ENTITAS REFUND
' ==========================================


entity "refunds" as refunds {
    *id : UUID <<PK>>
    --
    transaction_id : UUID <<FK>>
    reason : TEXT
    proof_image : VARCHAR(255)
    refund_method : VARCHAR(50)
    payment_channel_id : UUID <<FK>>
    account_number : VARCHAR(100)
    total_amount : DECIMAL(10,0)
    refund_by_shift : UUID <<FK>>
    refunded_at : DATETIME
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ==========================================
' ENTITAS PROFIL TOKO
' ==========================================


entity "store_profiles" as store_profiles {
    *id : UUID <<PK>>
    --
    logo : VARCHAR(255)
    name : VARCHAR(100)
    tagline : VARCHAR(200)  
    type : VARCHAR(50)
    banner : VARCHAR(255)
    product : VARCHAR(100)
    description : TEXT
    building : VARCHAR(100)
    location : VARCHAR(100)
    address : VARCHAR(255)
    contact : VARCHAR(20)
    email : VARCHAR(255)
    website : VARCHAR(255)
    social_instagram : VARCHAR(100)
    social_facebook : VARCHAR(100)
    social_whatsapp : VARCHAR(20)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "store_documents" as store_documents {
    *id : UUID <<PK>>
    --
    document_name : VARCHAR(100)
    document_number : VARCHAR(100)
    document_file : VARCHAR(255)
    valid_from : DATE
    valid_until : DATE
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ==========================================
' ENTITAS ACTIVITY LOG
' ==========================================

entity "activity_log" as activity_log {
    *id : BIGINT <<PK>>
    --
    log_name : VARCHAR(255)
    description : TEXT
    subject_type : VARCHAR(100)
    subject_id : UUID
    causer_type : VARCHAR(100)
    causer_id : UUID
    properties : JSON
    event : VARCHAR(100)
    batch_uuid : UUID
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

' ==========================================
' RELASI INCREMENT 2
' ==========================================

' Relasi Extension Users
users ||--o{ hitungs : "creates"
users ||--o{ inventory_logs : "performs action"
users ||--o{ notifications : "receives"

' Relasi Extension Customers  
customers ||--o{ points_histories : "earns/uses points"

' Relasi Extension Shifts
shifts ||--o{ refunds : "processes refund"

' Relasi Extension Transactions
transactions ||--o{ points_histories : "generates points"
transactions ||--o{ refunds : "may have"

' Relasi Entity Baru
hitungs ||--o{ hitung_details : "has"

@enduml
